--- a/Project1/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1/Project1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\painter.cpp">
+    <ClCompile Include="..\project2.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
